--- a/常用命令.md
+++ b/常用命令.md
@@ -1,32 +1,58 @@
 ## 创建版本库
-1. git init 
+1. git init   
 初始化仓库
-2. git add <file> 
+2. git add <file>   
 添加到仓库
-3. git commit -m "message"
+3. git commit -m "message"  
 提交到仓库
+# 版本相关
 ## 版本退回
-1. git log --pretty=onelone
+1. git log --pretty=onelone  
 查看版本历史记录
-2. git reset --hard HEAD^
+2. git reset --hard HEAD^  
 退回上个版本，HEAD表示当前版本，文件也退回
-3. git reset --hard <commit id>
+3. git reset --hard <commit id>  
 commit id 可以在git log中找到
-4. git reflog
+4. git reflog  
 所有命令的记录
 ## 工作区和暂存区
-1. git status
+1. git status  
 查看状态
 
-## 管理修改
+## 管理修改  
 1. git diff HEAD -- <filename>
 查看工作区和版本库里面最新版本的区别
 
 ## 撤销修改
-1. git checkout -- file
+1. git checkout -- file  
 丢弃工作区的修改，返回到上一次add或者commit状态
-2. git reset HEAD <file> 
+2. git reset HEAD <file>   
 撤销掉暂存区的修改，即把暂存区放回工作区
+
+## 删除文件
+
+1. git rm  
+从版本库删除文件  
+先手动删除**工作目录**的文件，再使用git rm 和gt add的效果是一样的 
+如果删错了，可以用 git checkout -- filename 退回版找回来
+# 远程仓库
+## ssh链接
+1. cd ~
+去到主目录
+1. ssh-keygen -t rsa -C "email"
+生成密钥，将.pub的内容分享给别人
+## 添加远程仓库
+1. git remote add origin git@github.com:pmzzzz/xxxx.git
+添加远程库名叫origin，origin是远程库默认名字
+2. git push -u origin master
+第一次加 -u，master是本地的节点
+
+## 从远程库克隆
+1. git clone git@github.com:pmzzzz/xxxx.git
+xxxx是自己的仓库名，会在当前目录下载整个仓库  
+还可以用https://github.com/michaelliao/gitskills.git这样的地址
+
+
 
 
 
