修改错别字

--- a/常用命令.md
+++ b/常用命令.md
@@ -7,7 +7,7 @@
 提交到仓库
 # 版本相关
 ## 版本退回
-1. git log --pretty=onelone  
+1. git log --pretty=oneline  
 查看版本历史记录
 2. git reset --hard HEAD^  
 退回上个版本，HEAD表示当前版本，文件也退回
