创建与合并分支

--- a/常用命令.md
+++ b/常用命令.md
@@ -52,6 +52,20 @@ commit id 可以在git log中找到
 xxxx是自己的仓库名，会在当前目录下载整个仓库  
 还可以用https://github.com/michaelliao/gitskills.git这样的地址
 
+# 分支管理
+## 创建与合并分支
+1. git branch  
+查看分支
+2. git branch name
+创建分支
+3. git checkout name /switch name
+切换分支
+4. git checkout -b name /switch -c name
+创建后切换到分支
+5. git merge name 
+合并分支
+6. git branch -d name  
+删除分支
 
 
 
