命名本地主节点

--- a/常用命令.md
+++ b/常用命令.md
@@ -44,6 +44,8 @@ commit id 可以在git log中找到
 ## 添加远程仓库
 1. git remote add origin git@github.com:pmzzzz/xxxx.git
 添加远程库名叫origin，origin是远程库默认名字
+3. git branch -M <name>  
+命名主节点
 2. git push -u origin master
 第一次加 -u，master是本地的节点
 
